# LibrarySystem

./: CMakeLists.txt
src/: Runtime.ixx  main.cpp
src/core/: Book.ixx  Config.ixx  Record.ixx  User.ixx
src/core/sql/: SqliteConnection.ixx  Storable.ixx
src/sql/: SqliteConnection.ixx
src/ui/: Application.ixx  ConsoleDrawer.ixx  PageState.ixx
src/ui/pages/: AdminPage.ixx  ExitPage.ixx  LoginPage.ixx  Page.ixx  RegisterPage.ixx  StudentPage.ixx  TeacherPage.ixx  UserPage.ixx  WelcomePage.ixx
src/utils/: Format.ixx  Hash.ixx  Logger.ixx  Time.ixx  Types.ixx
